--- a/.gitconfig
+++ b/.gitconfig
@@ -1,1 +1,32 @@
-/Users/Bellegarde/.fresh/build/gitconfig
+# fresh: gitconfig
+
+[credential]
+	helper = osxkeychain
+[branch]
+        autosetupmerge = true
+        # Tells git-branch and git-checkout to setup new branches so that git-pull(1)
+        # will appropriately merge from that remote branch.  Recommended.  Without this,
+        # you will have to add --track to your branch command or manually merge remote
+        # tracking branches with "fetch" and then "merge".
+
+[push]
+        default = upstream
+[rebase]
+	autostash = true
+
+[rerere]
+        enabled = 1
+
+[mergetool "ediff"]
+        cmd = /Applications/Emacs.app/Contents/MacOS/bin/emacsclient -c --eval \"(git-mergetool-emacsclient-ediff \\\"$LOCAL\\\" \\\"$REMOTE\\\" \\\"$BASE\\\" \\\"$MERGED\\\")\"
+        trustExitCode = true
+
+[mergetool]
+        prompt = false
+
+[merge]
+        tool = ediff
+        conflictstyle = diff3
+
+[github]
+        user = JeffBellegarde
