remove errors from tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,6 @@ set -g set-titles-string "tmux:#I #W"
 set -g renumber-windows on
 
 set -g mouse on
-set -g mouse-utf8 on
 set -g set-clipboard on
 setw -g mode-keys vi
 
@@ -45,9 +44,6 @@ bind-key BSpace previous-window
 # title (default key in tmux is ',')
 bind-key A command-prompt "rename-window %%"
 
-# quit
-bind-key \ confirm-before kill-server
-
 # displays
 bind-key * list-clients
 
@@ -63,16 +59,27 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
+# Colors
+# Colors from solarized light
+# '#fdf6e3' A light tannish color used for backgrounds
+# '#eee8d5' A dark tan used seperators
+
+## active window
+set -g window-active-style bg='#fdf6e3'
+
+## inactive window
+set -g window-style bg='#fdf6e3'
+
+# pane border
+set -g pane-border-style bg='#eee8d5'
+set -g pane-active-border-style bg='#eee8d5'
+
 # Set status bar
 set -g status-bg black
 set -g status-fg white
 set -g status-left '#[fg=black]#[bg=green]#h #S'
 set -g status-right '#W:#P'
 set -g status-left-length 20
-set -g quiet on
-
-# Highlight active window
-set-window-option -g window-status-current-bg red
 
 # No delay for escape key press
 set -sg escape-time 0
@@ -83,14 +90,8 @@ bind r source-file ~/.tmux.conf
 #Steal pane
 bind-key @ command-prompt -p "steal pane from:"  "join-pane -s ':%%'"
 
-bind-key S command-prompt -p 'Host:' "run-shell '~/bin/tmux_ssh %%'"
-bind-key G command-prompt -p 'Gem:' "run-shell '~/bin/tmux_gem %%'"
-bind-key J command-prompt -p 'Jobs1:' "run-shell '~/bin/tmux_jobs1 %%'"
-bind-key K run-shell "/Users/jbellegarde/bin/tmux_gem dev"
 bind-key '"' split-window -c  "#{pane_current_path}"
 bind-key '%' split-window -h -c "#{pane_current_path}"
-#bind J command-prompt -p 'Jobs2:' "run-shell 'teamocil jobs qa54'"
-#bind L command-prompt -p 'Jobs2:' "run-shell 'teamocil --list'"
 
 
 #new-session -s main
