--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,24 +62,28 @@ bind-key l select-pane -R
 # Colors
 # Colors from solarized light
 # '#fdf6e3' A light tannish color used for backgrounds
-# '#eee8d5' A dark tan used seperators
+# '#839496' A dark tan used seperators
 
 ## active window
-set -g window-active-style bg='#fdf6e3'
+set -g window-active-style 'bg=#fdf6e3 fill=blue'
 
 ## inactive window
 set -g window-style bg='#fdf6e3'
 
 # pane border
-set -g pane-border-style bg='#eee8d5'
-set -g pane-active-border-style bg='#eee8d5'
+set -g pane-border-style 'bg=#eee8d5 fg=#839496'
+set -g pane-active-border-style 'bg=#eee8d5 fg=#839496'
+
+## window list
+set -g window-status-current-style 'bg=#b58900 fg=black'
 
 # Set status bar
 set -g status-bg black
 set -g status-fg white
-set -g status-left '#[fg=black]#[bg=green]#h #S'
+set -g status-left '#[fg=black]#[bg=green]#{?client_prefix,#[bg=red],}#h #S '
 set -g status-right '#W:#P'
 set -g status-left-length 20
+set -g status-style 'bg=#eee8d5 fg=#839496'
 
 # No delay for escape key press
 set -sg escape-time 0
