More playing with colors.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ bind-key C-q send-prefix
 
 set -g status-keys emacs
 
-set -g default-terminal "screen-256color"
-set-option -g default-shell "/usr/local/bin/fish"
+set -g default-terminal "tmux-256color"
+set-option -g default-shell "/usr/bin/fish"
 set -g set-titles on
 set -g set-titles-string "tmux:#I #W"
 set -g renumber-windows on
@@ -65,10 +65,10 @@ bind-key l select-pane -R
 # '#839496' A dark tan used seperators
 
 ## active window
-set -g window-active-style 'bg=#fdf6e3 fill=blue'
+set -g window-active-style 'bg=#fdf6e3 fg=black'
 
 ## inactive window
-set -g window-style bg='#fdf6e3'
+set -g window-style bg='#fdf6e3 fg=black'
 
 # pane border
 set -g pane-border-style 'bg=#eee8d5 fg=#839496'
